# web-bundler

./: .woodpecker.yml  CHANGELOG.md  Cargo.toml  README.md  renovate.json
.semaphore/: long-running-tests.yml  pipeline_2.yml  semaphore.yml
example/: Cargo.toml
example/backend/: Cargo.toml  build.rs
example/backend/src/: main.rs
example/frontend/: Cargo.toml
src/: lib.rs
tests/bevy/backend/: Cargo.toml  build.rs
tests/bevy/frontend/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
