[package]
name = "web-bundler"
description = "Bundles a Seed SPA for publishing"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/panoptix-za/web-bundler"
license = "MIT/Apache-2.0"
keywords = ["wasm", "web"]
categories = ["web-programming"]
authors = ["Justin Wernick <justin@worthe-it.co.za>"]

[dependencies]
fs_extra = "1"
sass-rs = "0.2"
anyhow = "1"
tera = "1"
walkdir = "2"
rand = "0.7"
