[package]
name = "web-bundler"
description = "Manages the building of WebAssembly single page app frontends from a build.rs script so that they can easily be embedded into Rust API projects"
version = "0.1.4"
edition = "2018"
repository = "https://github.com/panoptix-za/web-bundler"
license = "MIT/Apache-2.0"
keywords = ["wasm", "web"]
categories = ["web-programming"]
authors = [
  "Panoptix OSS maintainers <oss@panoptix.io>",
  "Martin Kavík <martin@kavik.cz>",
]
readme = "README.md"

[dependencies]
fs_extra = "1"
sass-rs = "0.2"
anyhow = "1"
tera = "1"
walkdir = "2"
rand = "0.8"
wasm-pack = "0.10.0"
