[package]
name = "backend"
version = "2.5.0"
edition = "2018"

[dependencies]
warp = "0.2"
mime_guess = "2"
tokio = { version = "0.2", features = ["full"] }
rust-embed={ version="5", features=["compression", "interpolate-folder-path"]}

[build-dependencies]
# depend on the frontend project here not because we actually use it,
# but because we want to trigger a rerun of the build.rs script if
# anything in it changes.
frontend = { path = "../frontend" }
web-bundler = { path = "../.." }
