[package]
name = "backend"
version = "0.0.0"
edition = "2018"

[dependencies]
warp = "0.2"
mime_guess = "2"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.rust-embed]
version="5"
features= ["compression", "interpolate-folder-path"]

# depend on the frontend project here not because we actually use it,
# but because we want to trigger a rerun of the build.rs script if
# anything in it changes.
[build-dependencies.frontend]
path = "../frontend"

[build-dependencies.web-bundler]
path = "../.."
