[package]
name = "backend"
version = "0.0.0"
edition = "2018"

[dependencies]
warp = "0.2"
mime_guess = "2"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.rust-embed]
version="5"
features= ["compression", "interpolate-folder-path"]

# depend on the frontend project here not because we actually use it,
# but because we want to trigger a rerun of the build.rs script if
# anything in it changes.
[build-dependencies.frontend]
path = "../frontend"

[build-dependencies.web-bundler]
path = "../.."

# pinning to this version since syn v1.0.58 broke API
# https://github.com/dtolnay/syn/commit/957840eba2c7f11c95e0227760d78dc481a91de7
# issue tracked at https://github.com/pyros2097/rust-embed/issues/127
[dependencies.syn]
version = "=1.0.57"
